# pad

./: CMakeLists.txt  HashTabellen.cbp  LoesungA.cpp  LoesungB.cpp  NiceString.cbp  NiceString.depend  NiceString.layout  TestResult.h  WordHash.cpp  WordHash.h  WordHashItem.cpp  WordHashItem.h  Zeitmessung.c  Zeitmessung.h  deu_Lutherbibel_1912.txt  examples.txt  main.cpp  runtime.txt
